--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.3.4",
     "@astrojs/vercel": "^6.1.3",
+    "@supabase/supabase-js": "^2.39.2",
     "astro": "^4.1.1",
     "typescript": "^5.3.3"
   }
