--- a/package.json
+++ b/package.json
@@ -7,13 +7,24 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
+    "format": "prettier --write . --plugin=prettier-plugin-astro",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.3.4",
+    "@astrojs/solid-js": "^4.0.1",
+    "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^6.1.3",
     "@supabase/supabase-js": "^2.39.2",
     "astro": "^4.1.1",
+    "micromatch": "^4.0.5",
+    "solid-js": "^1.8.10",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/micromatch": "^4.0.6",
+    "prettier": "^3.1.1",
+    "prettier-plugin-astro": "^0.12.2"
   }
 }
