--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/vercel": "^6.1.3",
     "@supabase/supabase-js": "^2.39.2",
     "astro": "^4.1.1",
+    "canvas-confetti": "^1.9.2",
     "micromatch": "^4.0.5",
     "solid-js": "^1.8.10",
     "tailwindcss": "^3.4.1",
