--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "canvas-confetti": "^1.9.2",
     "micromatch": "^4.0.5",
     "solid-js": "^1.8.10",
+    "supabase": "^1.136.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
