--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@astrojs/solid-js": "^4.0.1",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^6.1.3",
+    "@supabase/supabase-js": "^2.39.3",
     "astro": "^4.3.2",
     "canvas-confetti": "^1.9.2",
     "micromatch": "^4.0.5",
     "solid-js": "^1.8.10",
-    "supabase": "^1.136.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
